Add some setup for gh pages

--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "recursion-practice",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "vite": "^4.4.0"
-  }
+	"homepage": "https://Peleton-011.github.io/recursion-practice",
+	"name": "recursion-practice",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"deploy": "gh-pages -d dist"
+	},
+	"devDependencies": {
+		"gh-pages": "^5.0.0",
+		"vite": "^4.4.0"
+	}
 }
