Fix typo in URL

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://Peleton-011.github.io/recursion-practice",
+	"homepage": "https://peleton-011.github.io/recursion-practice",
 	"name": "recursion-practice",
 	"private": true,
 	"version": "0.0.0",
